trunk/Archive2/c2/4e5b1cc8806d8d/output
main.cpp:18:9: error: expected unqualified-id before '.' token
         .file   "test.cpp"
         ^
main.cpp:20:25: error: expected unqualified-id before '.' token
         .def    __main; .scl    2;      .type   32;     .endef
                         ^
main.cpp:20:41: error: expected unqualified-id before '.' token
         .def    __main; .scl    2;      .type   32;     .endef
                                         ^
main.cpp:20:57: error: expected unqualified-id before '.' token
         .def    __main; .scl    2;      .type   32;     .endef
                                                         ^
main.cpp:27:25: error: expected unqualified-id before '.' token
         .def    main;   .scl    2;      .type   32;     .endef
                         ^
main.cpp:27:41: error: expected unqualified-id before '.' token
         .def    main;   .scl    2;      .type   32;     .endef
                                         ^
main.cpp:27:57: error: expected unqualified-id before '.' token
         .def    main;   .scl    2;      .type   32;     .endef
                                                         ^
main.cpp:45:25: error: expected unqualified-id before '.' token
         .def    printf; .scl    2;      .type   32;     .endef
                         ^
main.cpp:45:41: error: expected unqualified-id before '.' token
         .def    printf; .scl    2;      .type   32;     .endef
                                         ^
main.cpp:45:57: error: expected unqualified-id before '.' token
         .def    printf; .scl    2;      .type   32;     .endef
                                                         ^
